--- a/index.html
+++ b/index.html
@@ -9,17 +9,20 @@
 </head>
 <body>
     <header class="cabeçalho">
-        <img class="cabeçalho-imagem" src="apenas-um-show5-removebg-preview.png" alt="logo star">
+        <br>
+        <img class="cabeçalho-imagem1" src="apenas-um-show5-removebg-preview.png" alt="logo star">
         <ul class="cabeçalho-lista">
             <li class="cabeçalho-lista-item">MORDECAI</li>
             <li class="cabeçalho-lista-item">RIGBY</li>
         </ul>
     </header>
+    <br>
 <section class="escola">
 <h2 class="escola-titulo">APENAS UM SHOW</h2>
+<br>
 <p class="texto-um">Mordecai e Rigby são guardas de um parque. Mas esses melhores amigos são preguiçosos e não deixam o trabalho interferir com sua capacidade de se divertir. Enquanto Mordecai tenta ser responsável e fazer um bom trabalho, é frequentemente desencaminhado por seu imaturo companheiro, totalmente imune à vergonha ou ao medo e sem nenhum limite.</p>
 <p class="texto-dois">Os amigos acabam sempre pagando pelas suas ações irresponsáveis, pois se metem em mais confusões do que esperavam. A negligência no trabalho causa muito desgosto ao chefe temperamental da dupla, Benson.</p>
-<img class="cabeçalho-imagem" src="apenasumshow.gif" alt="logo star">
+<img class="cabeçalho-imagem2" src="apenasumshow.gif" alt="logo star">
 </section>
 </body>
 </html>
